logs/Slang/chapter-8/8.26.2--implements.sv.log
name: implements
description: implements keyword test
should_fail: 0
tags: 8.26.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements.sv:8:2: error: language feature not yet supported
	interface class ihello;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements.sv:12:2: error: language feature not yet supported
	class Hello implements ihello;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements.sv:18:2: error: use of undeclared identifier 'Hello'
	Hello obj;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.26.2--implements.sv:21:9: error: language feature not yet supported
		obj = new;
		      ^~~
